--- a/products-subpages/conditioner-prod2.html
+++ b/products-subpages/conditioner-prod2.html
@@ -57,7 +57,9 @@
         <p>
             The Cream Silk Blue conditioner for damaged hair has Fiber Repair Complex specially designed to repair weak and damaged hair, protecting it from damage. It’s also a great conditioner for curly hair and as deep conditioner for natural hair. 
         </p>
-        <button>Buy Now</button>
+        <a href="https://www.lazada.com.ph/shop-hair-care/cream-silk/" target="_blank">
+          <button>Buy Now</button>
+        </a>
       </div>
       <div class="tabs">
         <button class="tab active" onclick="openTab(event, 'about')">
