--- a/products-subpages/conditioner-prod3.html
+++ b/products-subpages/conditioner-prod3.html
@@ -64,7 +64,9 @@
         <p>
     Suffering from hairfall? Use a hair fall rescue conditioner or hair fall defense conditioner like Cream Silk Hair Fall Control Conditioner, our Cream Silk Green. It’s the hair conditioner for hair fall and conditioner for long hair with Break-Shield Complex. It is designed to make weak and brittle hair stronger from roots to tips. Not only that, it’s also the long hair conditioner that can help you grow healthy strands. So, if you need a conditioner for hair fall, choose Cream Silk Green for your hair fall conditioner. Anti hair fall and anti hair loss conditioners need not be expensive. 
         </p>
-        <button>Buy Now</button>
+        <a href="https://www.lazada.com.ph/shop-hair-care/cream-silk/" target="_blank">
+          <button>Buy Now</button>
+        </a>
       </div>
       <div class="tabs">
         <button class="tab active" onclick="openTab(event, 'about')">
