--- a/products-subpages/conditioner-prod4.html
+++ b/products-subpages/conditioner-prod4.html
@@ -64,7 +64,9 @@
         <p>
             Cream Silk Dry Rescue Conditioner is the conditioner for dry hair that’s formulated with Moisture Lock Complex to address dry, dehydrated hair, protecting it from dryness.So, treat dry hair only with our Cream Silk Orange. 
         </p>
-        <button>Buy Now</button>
+        <a href="https://www.lazada.com.ph/shop-hair-care/cream-silk/" target="_blank">
+          <button>Buy Now</button>
+        </a>
       </div>
       <div class="tabs">
         <button class="tab active" onclick="openTab(event, 'about')">
