--- a/products-subpages/conditioner-prod5.html
+++ b/products-subpages/conditioner-prod5.html
@@ -64,7 +64,9 @@
         <p>
             Long & Luscious with Fibra-Boost Complex makes hair fibers more beautiful as they grow long, boosting the nourishment of each hair strand to the tips. When you notice hair lightening or hair turning from dark to light hair, it may signal a problem with the strands. Address lightening dark hair with this conditioner that nourishes your every strand to avoid light hair.
         </p>
-        <button>Buy Now</button>
+        <a href="https://www.lazada.com.ph/shop-hair-care/cream-silk/" target="_blank">
+          <button>Buy Now</button>
+        </a>
       </div>
       <div class="tabs">
         <button class="tab active" onclick="openTab(event, 'about')">
