--- a/products-subpages/hairtreat-prod1.html
+++ b/products-subpages/hairtreat-prod1.html
@@ -64,7 +64,9 @@
         <p>
             Triple Keratin Rescue Ultimate Hair fall Defiance is an anti-hair fall treatment shot that protects your hair from extreme factors that cause hair fall and breakage, like frequent heat-styling and chemical treatments. It has 3x Keratin with revolutionary fiber actives for up to 10x hair fall protection. Use once a week for best results. 
         </p>
-        <button>Buy Now</button>
+        <a href="https://www.lazada.com.ph/shop-hair-care/cream-silk/" target="_blank">
+          <button>Buy Now</button>
+        </a>
       </div>
       <div class="tabs">
         <button class="tab active" onclick="openTab(event, 'about')">
