--- a/products-subpages/hairtreat-prod2.html
+++ b/products-subpages/hairtreat-prod2.html
@@ -64,7 +64,9 @@
         <p>
             Cream Silk Triple Keratin Rescue Ultra Treatment Crème Ultimate Straight has 3x keratin, making it the hair treatment for smooth, straight hair 
         </p>
-        <button>Buy Now</button>
+        <a href="https://www.lazada.com.ph/shop-hair-care/cream-silk/" target="_blank">
+          <button>Buy Now</button>
+        </a>
       </div>
       <div class="tabs">
         <button class="tab active" onclick="openTab(event, 'about')">
