--- a/products-subpages/hairtreat-prod3.html
+++ b/products-subpages/hairtreat-prod3.html
@@ -64,7 +64,9 @@
         <p>
             The NEW Cream Silk Triple Keratin Rescue Ultimate Straight Ultra Treatment Wrap is here. It’s the Cream Silk keratin treatment that repairs hair and gives it a gloriously beautiful shine. Use it and say goodbye to rebelliously frizzy hair as this Creamsilk treatment product tames your every strand and also acts as a hair color conditioner by protecting the strands from dryness. So, for frizz-free, straight hair, choose Creamsilk keratin. 
         </p>
-        <button>Buy Now</button>
+        <a href="https://www.lazada.com.ph/shop-hair-care/cream-silk/" target="_blank">
+          <button>Buy Now</button>
+        </a>
       </div>
       <div class="tabs">
         <button class="tab active" onclick="openTab(event, 'about')">
