--- a/products-subpages/lightcond-prod1.html
+++ b/products-subpages/lightcond-prod1.html
@@ -64,7 +64,9 @@
         <p>
             Tired of fine flat hair and flat iron hair? Creamsilk Hydra Fresh Fresh & Bouncy is water-based, easy-rinse, and non-greasy. It's Creamsilk's light conditioner with intense hydration for bouncy hair. Say goodbye to flat top hair and thin flat hair because with this conditioner, your hair will have volume and body. 
         </p>
-        <button>Buy Now</button>
+        <a href="https://www.lazada.com.ph/shop-hair-care/cream-silk/" target="_blank">
+          <button>Buy Now</button>
+        </a>
       </div>
       <div class="tabs">
         <button class="tab active" onclick="openTab(event, 'about')">
