--- a/products-subpages/lightcond-prod2.html
+++ b/products-subpages/lightcond-prod2.html
@@ -64,7 +64,9 @@
         <p>
             Looking for a dry hair conditioner? NEW Cream Silk Hydra Fresh Fresh & Hydrated is water-based, easy-rinse, and non-greasy. It’s Cream Silk's light conditioner that won't weigh your hair down. It’s a conditioner for dry scalp and dry hair that you can use at home so that you can have healthy, hydrated hair. 
         </p>
-        <button>Buy Now</button>
+        <a href="https://www.lazada.com.ph/shop-hair-care/cream-silk/" target="_blank">
+          <button>Buy Now</button>
+        </a>
       </div>
       <div class="tabs">
         <button class="tab active" onclick="openTab(event, 'about')">
