--- a/products-subpages/ultracond-prod1.html
+++ b/products-subpages/ultracond-prod1.html
@@ -65,7 +65,9 @@
         <p>
             Is your hair falling out? Are you looking for a good hair fall solution? Triple Keratin Rescue Ultimate Hair fall Defiance, Creamsilk’s best anti hairfall conditioner, is an anti-hair fall ultra-conditioner that has 3x Keratin with revolutionary fiber actives that nourish and fortify hair at a cellular level, making hair up to 3x stronger. Use this hair fall control conditioner daily for best results. 
         </p>
-        <button>Buy Now</button>
+        <a href="https://www.lazada.com.ph/shop-hair-care/cream-silk/" target="_blank">
+          <button>Buy Now</button>
+        </a>
       </div>
       <div class="tabs">
         <button class="tab active" onclick="openTab(event, 'about')">
