--- a/products-subpages/ultracond-prod3.html
+++ b/products-subpages/ultracond-prod3.html
@@ -64,7 +64,9 @@
         <p>
             Frizzy hair just doesn’t look healthy. NEW Ultimate Repair & Shine Conditioner, a deep conditioner for frizzy hair, is your Triple Keratin Rescue! Get the benefits of 3 Keratin products in 1 ultimate solution for healthy and shiny hair. It’s Cream Silk’s best conditioner for dry damaged hair and best deep conditioner for dry hair.
         </p>
-        <button>Buy Now</button>
+        <a href="https://www.lazada.com.ph/shop-hair-care/cream-silk/" target="_blank">
+          <button>Buy Now</button>
+        </a>
       </div>
       <div class="tabs">
         <button class="tab active" onclick="openTab(event, 'about')">
