--- a/products-subpages/ultracond-prod4.html
+++ b/products-subpages/ultracond-prod4.html
@@ -64,7 +64,9 @@
         <p>
             NEW Ultimate Straight Conditioner is your Triple Keratin Rescue! Get the benefits of 3 Keratin products in 1 great solution for ultimately smooth hair. 
         </p>
-        <button>Buy Now</button>
+        <a href="https://www.lazada.com.ph/shop-hair-care/cream-silk/" target="_blank">
+          <button>Buy Now</button>
+        </a>
       </div>
       <div class="tabs">
         <button class="tab active" onclick="openTab(event, 'about')">
