--- a/products-subpages/ultracond-prod5.html
+++ b/products-subpages/ultracond-prod5.html
@@ -64,8 +64,9 @@
         <p>
             Cream Silk Triple Keratin Rescue Ultimate Straight gives you the benefits of keratin in one amazing product.  
         </p>
-        <button>Buy Now</button>
-      </div>
+        <a href="https://www.lazada.com.ph/shop-hair-care/cream-silk/" target="_blank">
+          <button>Buy Now</button>
+        </a>
       <div class="tabs">
         <button class="tab active" onclick="openTab(event, 'about')">
           ABOUT THIS PRODUCT
