--- a/products-subpages/conditioner-prod1.html
+++ b/products-subpages/conditioner-prod1.html
@@ -65,7 +65,9 @@
           10X STRAIGHTER HAIR Standout Straight with Frizz Defense Complex to
           make unruly and frizzy hair straighter, smoother, with less frizz
         </p>
-        <button>Buy Now</button>
+        <a href="https://www.lazada.com.ph/shop-hair-care/cream-silk/" target="_blank">
+          <button>Buy Now</button>
+        </a>
       </div>
       <div class="tabs">
         <button class="tab active" onclick="openTab(event, 'about')">
