--- a/products-subpages/hairtreat-prod4.html
+++ b/products-subpages/hairtreat-prod4.html
@@ -64,7 +64,9 @@
         <p>
             The NEW Cream Silk Triple Keratin Rescue Ultimate Straight Ultra Treatment Wrap hair treatment is here. With keratin for repair and shine, it’s the treatment for hair that gives your strands the right TLC for healthier growth and nourishment. 
         </p>
-        <button>Buy Now</button>
+        <a href="https://www.lazada.com.ph/shop-hair-care/cream-silk/" target="_blank">
+          <button>Buy Now</button>
+        </a>
       </div>
       <div class="tabs">
         <button class="tab active" onclick="openTab(event, 'about')">
